# Real-Time-Object-Tracking-ROS2

./: .gitignore  README.md
src/object_tracking/: package.xml  setup.py
src/object_tracking/object_tracking/: image_publisher.py  image_subscriber.py
src/object_tracking_viz/: CMakeLists.txt  package.xml
src/object_tracking_viz/config/: params.yaml
src/object_tracking_viz/launch/: app.launch.py
src/object_tracking_viz/scripts/: image_subscriber.py  object_visualization.py
src/object_tracking_viz/src/: image_publisher.cpp  object_tracking.cpp
src/robo_controller/: package.xml  setup.py
src/robo_controller/robo_controller/: draw_circle.py  hello_node.py  pose_subs.py  turtle_controller.py
